--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
-
+/.idea/
+/.vscode/
 # testing
 /coverage
 
@@ -29,6 +30,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-
 # vercel
 .vercel
+
+/dist/
