--- a/package.json
+++ b/package.json
@@ -3,13 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"babel -w ./src --out-dir dist --extensions .ts,.tsx\"",
     "build": "next build",
-    "start": "next start"
+    "start": "ts-node src/index.ts",
+    "migration:create": "typeorm migration:create",
+    "migration:run": "typeorm migration:run",
+    "migration:revert": "typeorm migration:revert",
+    "entity:create": "typeorm entity:create"
   },
   "dependencies": {
-    "next": "10.0.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "@babel/cli": "^7.10.1",
+    "axios": "^0.19.2",
+    "global": "^4.4.0",
+    "gray-matter": "^4.0.2",
+    "marked": "^1.1.0",
+    "next": "9.4.1",
+    "pg": "^8.2.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "reflect-metadata": "^0.1.13",
+    "sass": "^1.26.5",
+    "typeorm": "^0.2.25",
+    "ua-parser-js": "^0.7.21"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.10.1",
+    "@types/axios": "^0.14.0",
+    "@types/marked": "^0.7.4",
+    "@types/node": "^14.0.6",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/ua-parser-js": "^0.7.33",
+    "concurrently": "^5.3.0",
+    "next-images": "^1.4.0",
+    "typescript": "^3.9.2"
   }
 }
